Updated lil bit

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   </header>
   <form>
     <input type="text" id="searchInput" placeholder="Search for Books here...">
-    <input type="submit" value="Search">
+    <input type="submit" id="searchButton" value="Search">
   </form>
   <section class="books-grid">
-    <div class="book-info">
-      <img id="bookImage" src="">
-      <p id="bookAuthor"></p>
-      <p id="bookTitle"></p>
-      <p id="bookDesc"></p>
+    <div class="books__info">
+      <img class="books__image" src="">
+      <p class="books__author"></p>
+      <p class="books__title"></p>
+      <p class="books__desc"></p>
     </div>
   </section>
 </body>
