--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 class="header__text">Google Books Library</h1>
   </header>
   <form class="search-form">
-    <input type="text" class="search-form__input" placeholder="Search for Books here...">
+    <input type="text" class="search-form__input" id="searchInput" placeholder="Search for Books here...">
     <input type="submit" class="search-form__button" id="searchButton" value="Search">
   </form>
   <section class="books-grid">
