--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <input type="text" class="search-form__input" id="searchInput" placeholder="Search for Books here...">
     <input type="submit" class="search-form__button" id="searchButton" value="Search">
   </form>
-  <section class="books-grid">
-    <div class="books-grid__info">
+  <section class="books-grid" id="booksGrid">
+    <div class="books-grid__info" id="bookInfoBlock">
       <img class="books-grid__image" src="">
       <p class="books-grid__author"></p>
       <p class="books-grid__title"></p>
