--- a/index.html
+++ b/index.html
@@ -16,13 +16,8 @@
     <input type="submit" class="search-form__button" id="searchButton" value="Search">
   </form>
   <section class="books-grid" id="booksGrid">
-    <div class="books-grid__info" id="bookInfoBlock">
-      <img class="books-grid__image" src="">
-      <p class="books-grid__author"></p>
-      <p class="books-grid__title"></p>
-      <p class="books-grid__desc"></p>
-    </div>
+
   </section>
 </body>
-<script src="./googleBooks.js"></script>
+<script type="module" src="./googleBooks.js"></script>
 </html>
